# CoCivil-AI-Powered-Civil-Development-Platform

./: .dockerignore  .env.example  .gitignore  .railwayignore  Dockerfile  Dockerfile.worker  Makefile  README.md  alembic_users.ini  docker-compose.app.yml  docker-compose.yml  index.md  pyproject.toml  railway.toml  sample_pipeline.dxf
.claude/: CLAUDE.md
City-electric-charge/: City Operated Electric Vehicle Charging Station Map - 4326.geojson
Road/: Road Reconstruction Program 4326.geojson
alembic_users/: env.py
app/: celery_app.py  config.py  database.py  devtools.py  main.py
docs/: DATA_PLAN.md  DATA_RESEARCH_TEAM_PLAN.md  RAG_LEGAL_DOCUMENT_GENERATION_RESEARCH.md  SUBMISSION_RESEARCH.md  TRACK_3_4_RESEARCH.md  TRACK_5_6_RESEARCH.md  index.md
fine-tuned-RAG/: .env.example  api.py  batch_output.txt  check_empty.py  config.py  fast_ingest.py  fix_one.py  get_context.py  ingest.py  populate_direct.py  populate_rag.py  rag_chain.py  requirements.txt  retriever.py  run_batch.py  test_ask.py
frontend/: .env.example  draft.ts  fix-auth.js  fix-auth.ts  get-auth-options.ts  get-hooks.js  next.config.ts  package-lock.json  package.json  test-hooks.ts  test-types.ts  test.ts  test2.ts
frontend-react/: index.html  package-lock.json  package.json
scripts/: Dockerfile.db  audit_toronto_seed.py  bootstrap_data.sh  dev_doctor.py  fix_water_mains_download.py  generate_sample_dxf.py  generate_sample_pipeline_dxf.py  generate_water_main_dxf.py  ingest_toronto_tracks_1_2.py  railway_seed.py  railway_seed_full.py  seed_reference_data.py  seed_toronto.py
(+234 files in other folders)
